src/objects/Financial_Aid_Package__c.object
<CustomObject>
    <fields>
        <fullName>Aid_Year__c</fullName>
        <description>[Peoplesoft] - Aid year options are 2000-2050, this is the year that the financial aid is for</description>
        <inlineHelpText>Financial Aid Year</inlineHelpText>
        <label>Aid Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>[Peoplesoft] - Master detail relationship with contact</description>
        <inlineHelpText>Financial Aid Contact</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Aid Packages</relationshipLabel>
        <relationshipName>Financial_Aid_Packages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EFC_Range__c</fullName>
        <description>[Peoplesoft] - Financial Aid EFC Range. Examples include: Very High, High, Moderate, Low, Very Low
Note: Whatever is in the Help Text will display as a hover help text on the Student Profile VF page.</description>
        <inlineHelpText>“Very High” need indicates an Expected Family Contribution (EFC) of $0
“High,” less than $5,000
“Moderate,” less than $15,000
“Low,” less than $33,000
“Very Low,” greater than $33,000</inlineHelpText>
        <label>EFC Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Very Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAFSA_Date_Received__c</fullName>
        <description>[Peoplesoft] - Date the FASFA was received</description>
        <inlineHelpText>Financial Aid Date FAFSA Received</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FA_Status_Time_Stamp__c</fullName>
        <description>[Salesforce] - shows the day and time the financial aid status field was updated.</description>
        <label>FA Status Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fin_Aid_Package_Date__c</fullName>
        <description>[Peoplesoft] - Date of Financial aid package</description>
        <inlineHelpText>Financial Aid Package Date</inlineHelpText>
        <label>Package Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Aid_Status__c</fullName>
        <description>[Peoplesoft] - Status of student’s financial aid file and progress toward completion.</description>
        <label>Financial Aid Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submit a FAFSA</fullName>
                </value>
                <value>
                    <fullName>Complete Your File</fullName>
                </value>
                <value>
                    <fullName>Eligibility Review &amp; Award Notice</fullName>
                </value>
                <value>
                    <fullName>Act on Your Awards</fullName>
                </value>
                <value>
                    <fullName>Disbursement</fullName>
                </value>
                <value>
                    <fullName>Disbursed</fullName>
                </value>
                <value>
                    <fullName>Applied to Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pell_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>[Peoplesoft] - Checkbox that shows if the student is Pell Eligability</description>
        <inlineHelpText>Financial Aid Pell Eligibility</inlineHelpText>
        <label>Pell Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promise_Cohort__c</fullName>
        <description>[Peoplesoft] - Financial Aid Promise Cohort. Examples include: Advantage, CAG, Obama</description>
        <inlineHelpText>Financial Aid Promise Cohort</inlineHelpText>
        <label>Promise Cohort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage</fullName>
                </value>
                <value>
                    <fullName>CAG</fullName>
                </value>
                <value>
                    <fullName>Obama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Information received from the FAFSA and when the financial aid package is awarded. It includes fields needed for admitted student communication.</description>
    <label>Financial Aid Package</label>
    <nameField>
        <label>Financial Aid Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Aid Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>